--- a/restaurant.html
+++ b/restaurant.html
@@ -12,14 +12,14 @@
 
 <body class="inside">
   <!-- Beginning header -->
-  <header>
+  <header role="heading">
     <!-- Beginning nav -->
-    <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+    <nav role="navigation">
+      <h1><a href="/" title="Go to the Restaurant Reviews homepage" role="link">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
-      <li><a href="/">Home</a></li>
+    <ul id="breadcrumb" role="navigation">
+      <li><a href="/" title="Go back home" role="link">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
     <!-- End nav -->
@@ -29,29 +29,29 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container">
+    <section id="map-container" role="figure" aria-label="Location of restaurant in the city">
       <div id="map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
-      <img id="restaurant-img">
-      <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
+    <section id="restaurant-container" aria-label="Information about the restaurant">
+      <h1 id="restaurant-name" aria-label="Restaurant name" role="heading"></h1>
+      <img id="restaurant-img" alt="An image of the restaurant" role="img">
+      <p id="restaurant-cuisine" aria-label="Cuisine type" role="definition"></p>
+      <p id="restaurant-address" aria-label="Restaurant address" role="text"></p>
+      <table id="restaurant-hours" aria-label="Restaurant hours" role="table"></table>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
-    <section id="reviews-container">
-      <ul id="reviews-list"></ul>
+    <section id="reviews-container" aria-label="Restaurant reviews">
+      <ul id="reviews-list" role="list"></ul>
     </section>
     <!-- End reviews -->
   </main>
   <!-- End main -->
 
   <!-- Beginning footer -->
-  <footer id="footer">
+  <footer id="footer" role="doc-credits" aria-label="Copyright notice">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
@@ -61,8 +61,8 @@
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
-  <!-- Google Maps -->
- <!--  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script> -->
+  <!-- Service workers -->
+  <script type="application/javascript" charset="utf-8" src="js/sw.js"></script>
   <!-- End scripts -->
 
 </body>
