--- a/restaurant.html
+++ b/restaurant.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="description" content="Justin Frost's Udacity Front End Nano-degree restaurant review project">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
@@ -35,7 +39,7 @@
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container" aria-label="Information about the restaurant">
-      <h1 id="restaurant-name" aria-label="Restaurant name" role="heading"></h1>
+      <h2 id="restaurant-name" aria-label="Restaurant name" role="heading"></h1>
       <img id="restaurant-img" alt="An image of the restaurant" role="img">
       <p id="restaurant-cuisine" aria-label="Cuisine type" role="definition"></p>
       <p id="restaurant-address" aria-label="Restaurant address" role="text"></p>
