--- a/restaurant.html
+++ b/restaurant.html
@@ -33,7 +33,7 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container" role="figure" aria-label="Location of restaurant in the city">
+    <section id="map-container" role="application" aria-label="Location of restaurant in the city">
       <div id="map"></div>
     </section>
     <!-- End map -->
