--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container" aria-label="Map of New York City" role="figure" tabindex="0">
+    <section id="map-container" aria-label="Map of New York City" role="application" tabindex="0">
       <div id="map"></div>
     </section>
     <section>
